container: multiple changes

--- a/package/crds/container.gcp.upbound.io_nodepools.yaml
+++ b/package/crds/container.gcp.upbound.io_nodepools.yaml
@@ -2651,6 +2651,8 @@ spec:
                         type: boolean
                       ephemeralStorageLocalSsdConfig:
                         properties:
+                          dataCacheCount:
+                            type: number
                           localSsdCount:
                             type: number
                         type: object
@@ -2715,11 +2717,27 @@ spec:
                         type: string
                       kubeletConfig:
                         properties:
+                          allowedUnsafeSysctls:
+                            items:
+                              type: string
+                            type: array
+                          containerLogMaxFiles:
+                            type: number
+                          containerLogMaxSize:
+                            type: string
                           cpuCfsQuota:
                             type: boolean
                           cpuCfsQuotaPeriod:
                             type: string
                           cpuManagerPolicy:
+                            type: string
+                          imageGcHighThresholdPercent:
+                            type: number
+                          imageGcLowThresholdPercent:
+                            type: number
+                          imageMaximumGcAge:
+                            type: string
+                          imageMinimumGcAge:
                             type: string
                           insecureKubeletReadonlyPortEnabled:
                             type: string
@@ -2766,6 +2784,8 @@ spec:
                       loggingVariant:
                         type: string
                       machineType:
+                        type: string
+                      maxRunDuration:
                         type: string
                       metadata:
                         additionalProperties:
@@ -2950,6 +2970,18 @@ spec:
                               type: string
                           type: object
                         type: array
+                      windowsNodeConfig:
+                        description: |-
+                          Parameters used in creating the node pool. See
+                          google_container_cluster for schema.
+                        properties:
+                          osversion:
+                            description: |-
+                              The Kubernetes version for the nodes in this pool. Note that if this field
+                              and auto_upgrade are both specified, they will fight each other for what the node version should
+                              be, so setting both is highly discouraged.
+                            type: string
+                        type: object
                       workloadMetadataConfig:
                         properties:
                           mode:
@@ -3280,6 +3312,8 @@ spec:
                         type: boolean
                       ephemeralStorageLocalSsdConfig:
                         properties:
+                          dataCacheCount:
+                            type: number
                           localSsdCount:
                             type: number
                         type: object
@@ -3344,11 +3378,27 @@ spec:
                         type: string
                       kubeletConfig:
                         properties:
+                          allowedUnsafeSysctls:
+                            items:
+                              type: string
+                            type: array
+                          containerLogMaxFiles:
+                            type: number
+                          containerLogMaxSize:
+                            type: string
                           cpuCfsQuota:
                             type: boolean
                           cpuCfsQuotaPeriod:
                             type: string
                           cpuManagerPolicy:
+                            type: string
+                          imageGcHighThresholdPercent:
+                            type: number
+                          imageGcLowThresholdPercent:
+                            type: number
+                          imageMaximumGcAge:
+                            type: string
+                          imageMinimumGcAge:
                             type: string
                           insecureKubeletReadonlyPortEnabled:
                             type: string
@@ -3395,6 +3445,8 @@ spec:
                       loggingVariant:
                         type: string
                       machineType:
+                        type: string
+                      maxRunDuration:
                         type: string
                       metadata:
                         additionalProperties:
@@ -3579,6 +3631,18 @@ spec:
                               type: string
                           type: object
                         type: array
+                      windowsNodeConfig:
+                        description: |-
+                          Parameters used in creating the node pool. See
+                          google_container_cluster for schema.
+                        properties:
+                          osversion:
+                            description: |-
+                              The Kubernetes version for the nodes in this pool. Note that if this field
+                              and auto_upgrade are both specified, they will fight each other for what the node version should
+                              be, so setting both is highly discouraged.
+                            type: string
+                        type: object
                       workloadMetadataConfig:
                         properties:
                           mode:
@@ -4105,6 +4169,8 @@ spec:
                         type: boolean
                       ephemeralStorageLocalSsdConfig:
                         properties:
+                          dataCacheCount:
+                            type: number
                           localSsdCount:
                             type: number
                         type: object
@@ -4169,11 +4235,27 @@ spec:
                         type: string
                       kubeletConfig:
                         properties:
+                          allowedUnsafeSysctls:
+                            items:
+                              type: string
+                            type: array
+                          containerLogMaxFiles:
+                            type: number
+                          containerLogMaxSize:
+                            type: string
                           cpuCfsQuota:
                             type: boolean
                           cpuCfsQuotaPeriod:
                             type: string
                           cpuManagerPolicy:
+                            type: string
+                          imageGcHighThresholdPercent:
+                            type: number
+                          imageGcLowThresholdPercent:
+                            type: number
+                          imageMaximumGcAge:
+                            type: string
+                          imageMinimumGcAge:
                             type: string
                           insecureKubeletReadonlyPortEnabled:
                             type: string
@@ -4220,6 +4302,8 @@ spec:
                       loggingVariant:
                         type: string
                       machineType:
+                        type: string
+                      maxRunDuration:
                         type: string
                       metadata:
                         additionalProperties:
@@ -4328,6 +4412,18 @@ spec:
                               type: string
                           type: object
                         type: array
+                      windowsNodeConfig:
+                        description: |-
+                          Parameters used in creating the node pool. See
+                          google_container_cluster for schema.
+                        properties:
+                          osversion:
+                            description: |-
+                              The Kubernetes version for the nodes in this pool. Note that if this field
+                              and auto_upgrade are both specified, they will fight each other for what the node version should
+                              be, so setting both is highly discouraged.
+                            type: string
+                        type: object
                       workloadMetadataConfig:
                         properties:
                           mode:
