--- a/package/crds/datafusion.gcp.upbound.io_instances.yaml
+++ b/package/crds/datafusion.gcp.upbound.io_instances.yaml
@@ -1490,6 +1490,16 @@ spec:
                   region:
                     description: The region of the Data Fusion instance.
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_value_id}.
+                      The field is ignored (both PUT & PATCH) when empty.
+                    type: object
+                    x-kubernetes-map-type: granular
                   type:
                     description: |-
                       Represents the type of Data Fusion instance. Each type is configured with
@@ -1797,6 +1807,16 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_value_id}.
+                      The field is ignored (both PUT & PATCH) when empty.
+                    type: object
+                    x-kubernetes-map-type: granular
                   type:
                     description: |-
                       Represents the type of Data Fusion instance. Each type is configured with
@@ -2163,6 +2183,16 @@ spec:
                     description: Additional information about the current state of
                       this Data Fusion instance if available.
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_value_id}.
+                      The field is ignored (both PUT & PATCH) when empty.
+                    type: object
+                    x-kubernetes-map-type: granular
                   tenantProjectId:
                     description: The name of the tenant project.
                     type: string
