--- a/package/crds/dataproc.gcp.upbound.io_workflowtemplates.yaml
+++ b/package/crds/dataproc.gcp.upbound.io_workflowtemplates.yaml
@@ -4831,6 +4831,14 @@ spec:
                       if the workflow was running on a (/dataproc/docs/concepts/workflows/using-workflows#configuring_or_selecting_a_cluster),
                       the cluster is deleted.
                     type: string
+                  encryptionConfig:
+                    description: Encryption settings for the cluster.
+                    properties:
+                      kmsKey:
+                        description: The uri of the KMS key used to encrypt various
+                          sensitive files.
+                        type: string
+                    type: object
                   jobs:
                     description: Required. The Directed Acyclic Graph of Jobs to submit.
                     items:
@@ -6119,6 +6127,14 @@ spec:
                       if the workflow was running on a (/dataproc/docs/concepts/workflows/using-workflows#configuring_or_selecting_a_cluster),
                       the cluster is deleted.
                     type: string
+                  encryptionConfig:
+                    description: Encryption settings for the cluster.
+                    properties:
+                      kmsKey:
+                        description: The uri of the KMS key used to encrypt various
+                          sensitive files.
+                        type: string
+                    type: object
                   jobs:
                     description: Required. The Directed Acyclic Graph of Jobs to submit.
                     items:
@@ -7578,6 +7594,14 @@ spec:
                       type: string
                     type: object
                     x-kubernetes-map-type: granular
+                  encryptionConfig:
+                    description: Encryption settings for the cluster.
+                    properties:
+                      kmsKey:
+                        description: The uri of the KMS key used to encrypt various
+                          sensitive files.
+                        type: string
+                    type: object
                   id:
                     description: an identifier for the resource with format projects/{{project}}/locations/{{location}}/workflowTemplates/{{name}}
                     type: string
