--- a/package/crds/dataproc.gcp.upbound.io_clusters.yaml
+++ b/package/crds/dataproc.gcp.upbound.io_clusters.yaml
@@ -4004,10 +4004,32 @@ spec:
                                   type: object
                                 type: array
                               provisioningModelMix:
+                                description: Defines how the Group selects the provisioning
+                                  model to ensure required reliability.
                                 properties:
                                   standardCapacityBase:
+                                    description: The base capacity that will always
+                                      use Standard VMs to avoid risk of more preemption
+                                      than the minimum capacity you need. Dataproc
+                                      will create only standard VMs until it reaches
+                                      standardCapacityBase, then it will start using
+                                      standardCapacityPercentAboveBase to mix Spot
+                                      with Standard VMs. eg. If 15 instances are requested
+                                      and standardCapacityBase is 5, Dataproc will
+                                      create 5 standard VMs and then start mixing
+                                      spot and standard VMs for remaining 10 instances.
                                     type: number
                                   standardCapacityPercentAboveBase:
+                                    description: The percentage of target capacity
+                                      that should use Standard VM. The remaining percentage
+                                      will use Spot VMs. The percentage applies only
+                                      to the capacity above standardCapacityBase.
+                                      eg. If 15 instances are requested and standardCapacityBase
+                                      is 5 and standardCapacityPercentAboveBase is
+                                      30, Dataproc will create 5 standard VMs and
+                                      then start mixing spot and standard VMs for
+                                      remaining 10 instances. The mix will be 30%
+                                      standard and 70% spot.
                                     type: number
                                 type: object
                             type: object
@@ -4985,10 +5007,32 @@ spec:
                                   type: object
                                 type: array
                               provisioningModelMix:
+                                description: Defines how the Group selects the provisioning
+                                  model to ensure required reliability.
                                 properties:
                                   standardCapacityBase:
+                                    description: The base capacity that will always
+                                      use Standard VMs to avoid risk of more preemption
+                                      than the minimum capacity you need. Dataproc
+                                      will create only standard VMs until it reaches
+                                      standardCapacityBase, then it will start using
+                                      standardCapacityPercentAboveBase to mix Spot
+                                      with Standard VMs. eg. If 15 instances are requested
+                                      and standardCapacityBase is 5, Dataproc will
+                                      create 5 standard VMs and then start mixing
+                                      spot and standard VMs for remaining 10 instances.
                                     type: number
                                   standardCapacityPercentAboveBase:
+                                    description: The percentage of target capacity
+                                      that should use Standard VM. The remaining percentage
+                                      will use Spot VMs. The percentage applies only
+                                      to the capacity above standardCapacityBase.
+                                      eg. If 15 instances are requested and standardCapacityBase
+                                      is 5 and standardCapacityPercentAboveBase is
+                                      30, Dataproc will create 5 standard VMs and
+                                      then start mixing spot and standard VMs for
+                                      remaining 10 instances. The mix will be 30%
+                                      standard and 70% spot.
                                     type: number
                                 type: object
                             type: object
@@ -6103,10 +6147,32 @@ spec:
                                   type: object
                                 type: array
                               provisioningModelMix:
+                                description: Defines how the Group selects the provisioning
+                                  model to ensure required reliability.
                                 properties:
                                   standardCapacityBase:
+                                    description: The base capacity that will always
+                                      use Standard VMs to avoid risk of more preemption
+                                      than the minimum capacity you need. Dataproc
+                                      will create only standard VMs until it reaches
+                                      standardCapacityBase, then it will start using
+                                      standardCapacityPercentAboveBase to mix Spot
+                                      with Standard VMs. eg. If 15 instances are requested
+                                      and standardCapacityBase is 5, Dataproc will
+                                      create 5 standard VMs and then start mixing
+                                      spot and standard VMs for remaining 10 instances.
                                     type: number
                                   standardCapacityPercentAboveBase:
+                                    description: The percentage of target capacity
+                                      that should use Standard VM. The remaining percentage
+                                      will use Spot VMs. The percentage applies only
+                                      to the capacity above standardCapacityBase.
+                                      eg. If 15 instances are requested and standardCapacityBase
+                                      is 5 and standardCapacityPercentAboveBase is
+                                      30, Dataproc will create 5 standard VMs and
+                                      then start mixing spot and standard VMs for
+                                      remaining 10 instances. The mix will be 30%
+                                      standard and 70% spot.
                                     type: number
                                 type: object
                             type: object
