datastream: multiple changes

--- a/package/crds/datastream.gcp.upbound.io_connectionprofiles.yaml
+++ b/package/crds/datastream.gcp.upbound.io_connectionprofiles.yaml
@@ -2387,6 +2387,10 @@ spec:
                       port:
                         description: Port for the MySQL connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       sslConfig:
                         description: |-
                           SSL configuration for the MySQL connection.
@@ -2499,6 +2503,10 @@ spec:
                       port:
                         description: Port for the Oracle connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the Oracle connection.
                         type: string
@@ -2686,6 +2694,10 @@ spec:
                       port:
                         description: Port for the PostgreSQL connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the PostgreSQL connection.
                         type: string
@@ -3038,6 +3050,10 @@ spec:
                       port:
                         description: Port for the SQL Server connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the SQL Server connection.
                         type: string
@@ -3246,6 +3262,10 @@ spec:
                       port:
                         description: Port for the MySQL connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       sslConfig:
                         description: |-
                           SSL configuration for the MySQL connection.
@@ -3318,8 +3338,6 @@ spec:
                       username:
                         description: Username for the MySQL connection.
                         type: string
-                    required:
-                    - passwordSecretRef
                     type: object
                   oracleProfile:
                     description: |-
@@ -3360,11 +3378,13 @@ spec:
                       port:
                         description: Port for the Oracle connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the Oracle connection.
                         type: string
-                    required:
-                    - passwordSecretRef
                     type: object
                   postgresqlProfile:
                     description: |-
@@ -3549,6 +3569,10 @@ spec:
                       port:
                         description: Port for the PostgreSQL connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the PostgreSQL connection.
                         type: string
@@ -3626,8 +3650,6 @@ spec:
                                 type: string
                             type: object
                         type: object
-                    required:
-                    - passwordSecretRef
                     type: object
                   privateConnectivity:
                     description: |-
@@ -3903,6 +3925,10 @@ spec:
                       port:
                         description: Port for the SQL Server connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the SQL Server connection.
                         type: string
@@ -3980,8 +4006,6 @@ spec:
                                 type: string
                             type: object
                         type: object
-                    required:
-                    - passwordSecretRef
                     type: object
                 type: object
               managementPolicies:
@@ -4230,6 +4254,10 @@ spec:
                       port:
                         description: Port for the MySQL connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       sslConfig:
                         description: |-
                           SSL configuration for the MySQL connection.
@@ -4278,6 +4306,10 @@ spec:
                       port:
                         description: Port for the Oracle connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the Oracle connection.
                         type: string
@@ -4296,6 +4328,10 @@ spec:
                       port:
                         description: Port for the PostgreSQL connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the PostgreSQL connection.
                         type: string
@@ -4329,6 +4365,10 @@ spec:
                       port:
                         description: Port for the SQL Server connection.
                         type: number
+                      secretManagerStoredPassword:
+                        description: A reference to a Secret Manager resource name
+                          storing the user's password.
+                        type: string
                       username:
                         description: Username for the SQL Server connection.
                         type: string
