eventarc: multiple changes

--- a/examples-generated/eventarc/v1beta1/googlechannelconfig.yaml
+++ b/examples-generated/eventarc/v1beta1/googlechannelconfig.yaml
@@ -8,6 +8,5 @@ metadata:
   name: primary
 spec:
   forProvider:
-    cryptoKeyName: ${data.google_kms_crypto_key.key1.id}
-    location: us-west1
-    project: ${data.google_project.test_project.project_id}
+    cryptoKeyName: ${data.google_kms_crypto_key.key.id}
+    location: us-central1
