--- a/examples-generated/eventarc/v1beta1/channel.yaml
+++ b/examples-generated/eventarc/v1beta1/channel.yaml
@@ -8,7 +8,6 @@ metadata:
   name: primary
 spec:
   forProvider:
-    cryptoKeyName: ${data.google_kms_crypto_key.key1.id}
-    location: us-west1
-    project: ${data.google_project.test_project.project_id}
-    thirdPartyProvider: projects/${data.google_project.test_project.project_id}/locations/us-west1/providers/datadog
+    cryptoKeyName: some-key
+    location: us-central1
+    thirdPartyProvider: projects/my-project-name/locations/us-central1/providers/datadog
