--- a/package/crds/eventarc.gcp.upbound.io_channels.yaml
+++ b/package/crds/eventarc.gcp.upbound.io_channels.yaml
@@ -74,15 +74,17 @@ spec:
               forProvider:
                 properties:
                   cryptoKeyName:
-                    description: Optional. Resource name of a KMS crypto key (managed
-                      by the user) used to encrypt/decrypt their event data. It must
-                      match the pattern projects/*/locations/*/keyRings/*/cryptoKeys/*.
+                    description: Resource name of a KMS crypto key (managed by the
+                      user) used to encrypt/decrypt their event data. It must match
+                      the pattern projects/*/locations/*/keyRings/*/cryptoKeys/*.
                     type: string
                   location:
                     description: The location for the resource
                     type: string
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                   thirdPartyProvider:
                     description: 'The name of the event provider (e.g. Eventarc SaaS
@@ -107,12 +109,14 @@ spec:
                   autoscaler.
                 properties:
                   cryptoKeyName:
-                    description: Optional. Resource name of a KMS crypto key (managed
-                      by the user) used to encrypt/decrypt their event data. It must
-                      match the pattern projects/*/locations/*/keyRings/*/cryptoKeys/*.
+                    description: Resource name of a KMS crypto key (managed by the
+                      user) used to encrypt/decrypt their event data. It must match
+                      the pattern projects/*/locations/*/keyRings/*/cryptoKeys/*.
                     type: string
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                   thirdPartyProvider:
                     description: 'The name of the event provider (e.g. Eventarc SaaS
@@ -294,17 +298,16 @@ spec:
               atProvider:
                 properties:
                   activationToken:
-                    description: Output only. The activation token for the channel.
-                      The token must be used by the provider to register the channel
-                      for publishing.
+                    description: The activation token for the channel. The token must
+                      be used by the provider to register the channel for publishing.
                     type: string
                   createTime:
-                    description: Output only. The creation time.
+                    description: The creation time.
                     type: string
                   cryptoKeyName:
-                    description: Optional. Resource name of a KMS crypto key (managed
-                      by the user) used to encrypt/decrypt their event data. It must
-                      match the pattern projects/*/locations/*/keyRings/*/cryptoKeys/*.
+                    description: Resource name of a KMS crypto key (managed by the
+                      user) used to encrypt/decrypt their event data. It must match
+                      the pattern projects/*/locations/*/keyRings/*/cryptoKeys/*.
                     type: string
                   id:
                     description: an identifier for the resource with format projects/{{project}}/locations/{{location}}/channels/{{name}}
@@ -313,16 +316,17 @@ spec:
                     description: The location for the resource
                     type: string
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                   pubsubTopic:
-                    description: 'Output only. The name of the Pub/Sub topic created
-                      and managed by Eventarc system as a transport for the event
-                      delivery. Format: projects/{project}/topics/{topic_id}.'
+                    description: 'The name of the Pub/Sub topic created and managed
+                      by Eventarc system as a transport for the event delivery. Format:
+                      projects/{project}/topics/{topic_id}.'
                     type: string
                   state:
-                    description: 'Output only. The state of a Channel. Possible values:
-                      STATE_UNSPECIFIED, PENDING, ACTIVE, INACTIVE'
+                    description: The state of a Channel.
                     type: string
                   thirdPartyProvider:
                     description: 'The name of the event provider (e.g. Eventarc SaaS
@@ -331,12 +335,12 @@ spec:
                       projects/{project}/locations/{location}/providers/{provider_id}.'
                     type: string
                   uid:
-                    description: Output only. Server assigned unique identifier for
-                      the channel. The value is a UUID4 string and guaranteed to remain
-                      unchanged until the resource is deleted.
+                    description: Server assigned unique identifier for the channel.
+                      The value is a UUID4 string and guaranteed to remain unchanged
+                      until the resource is deleted.
                     type: string
                   updateTime:
-                    description: Output only. The last-modified time.
+                    description: The last-modified time.
                     type: string
                 type: object
               conditions:
