--- a/package/crds/filestore.gcp.upbound.io_instances.yaml
+++ b/package/crds/filestore.gcp.upbound.io_instances.yaml
@@ -1028,6 +1028,30 @@ spec:
                           that this file share has been restored from.
                         type: string
                     type: object
+                  initialReplication:
+                    description: |-
+                      Replication configuration, once set, this cannot be updated.
+                      Addtionally this should be specified on the replica instance only, indicating the active as the peer_instance
+                      Structure is documented below.
+                    properties:
+                      replicas:
+                        description: |-
+                          The replication role.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            peerInstance:
+                              description: The peer instance.
+                              type: string
+                          type: object
+                        type: array
+                      role:
+                        description: |-
+                          The replication role.
+                          Default value is STANDBY.
+                          Possible values are: ROLE_UNSPECIFIED, ACTIVE, STANDBY.
+                        type: string
+                    type: object
                   kmsKeyName:
                     description: KMS key name used for data encryption.
                     type: string
@@ -1199,6 +1223,21 @@ spec:
                       Default value is NFS_V3.
                       Possible values are: NFS_V3, NFS_V4_1.
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags. Resource manager tag keys
+                      and values have the same definition as resource manager
+                      tags. Keys must be in the format tagKeys/{tag_key_id},
+                      and values are in the format tagValues/456. The field is
+                      ignored when empty. The field is immutable and causes
+                      resource replacement when mutated. This field is only set
+                      at create time and modifying this field after creation
+                      will trigger recreation. To apply tags to an existing
+                      resource, see the google_tags_tag_value resource.
+                    type: object
+                    x-kubernetes-map-type: granular
                   tier:
                     description: |-
                       The service tier of the instance.
@@ -1292,6 +1331,30 @@ spec:
                           The resource name of the backup, in the format
                           projects/{projectId}/locations/{locationId}/backups/{backupId},
                           that this file share has been restored from.
+                        type: string
+                    type: object
+                  initialReplication:
+                    description: |-
+                      Replication configuration, once set, this cannot be updated.
+                      Addtionally this should be specified on the replica instance only, indicating the active as the peer_instance
+                      Structure is documented below.
+                    properties:
+                      replicas:
+                        description: |-
+                          The replication role.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            peerInstance:
+                              description: The peer instance.
+                              type: string
+                          type: object
+                        type: array
+                      role:
+                        description: |-
+                          The replication role.
+                          Default value is STANDBY.
+                          Possible values are: ROLE_UNSPECIFIED, ACTIVE, STANDBY.
                         type: string
                     type: object
                   kmsKeyName:
@@ -1461,6 +1524,21 @@ spec:
                       Default value is NFS_V3.
                       Possible values are: NFS_V3, NFS_V4_1.
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags. Resource manager tag keys
+                      and values have the same definition as resource manager
+                      tags. Keys must be in the format tagKeys/{tag_key_id},
+                      and values are in the format tagValues/456. The field is
+                      ignored when empty. The field is immutable and causes
+                      resource replacement when mutated. This field is only set
+                      at create time and modifying this field after creation
+                      will trigger recreation. To apply tags to an existing
+                      resource, see the google_tags_tag_value resource.
+                    type: object
+                    x-kubernetes-map-type: granular
                   tier:
                     description: |-
                       The service tier of the instance.
@@ -1673,6 +1751,41 @@ spec:
                       type: string
                     type: object
                     x-kubernetes-map-type: granular
+                  effectiveReplication:
+                    description: |-
+                      Output only fields for replication configuration.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        replicas:
+                          description: |-
+                            The replication role.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              lastActiveSyncTime:
+                                description: |-
+                                  (Output)
+                                  Output only. The timestamp of the latest replication snapshot taken on the active instance and is already replicated safely.
+                                  A timestamp in RFC3339 UTC "Zulu" format, with nanosecond resolution and up to nine fractional digits.
+                                  Examples: "2014-10-02T15:01:23Z" and "2014-10-02T15:01:23.045123456Z"
+                                type: string
+                              state:
+                                description: |-
+                                  (Output)
+                                  Output only. The replica state
+                                type: string
+                              stateReasons:
+                                description: |-
+                                  (Output)
+                                  Output only. Additional information about the replication state, if available.
+                                items:
+                                  type: string
+                                type: array
+                            type: object
+                          type: array
+                      type: object
+                    type: array
                   etag:
                     description: |-
                       Server-specified ETag for the instance resource to prevent
@@ -1744,6 +1857,30 @@ spec:
                   id:
                     description: an identifier for the resource with format projects/{{project}}/locations/{{location}}/instances/{{name}}
                     type: string
+                  initialReplication:
+                    description: |-
+                      Replication configuration, once set, this cannot be updated.
+                      Addtionally this should be specified on the replica instance only, indicating the active as the peer_instance
+                      Structure is documented below.
+                    properties:
+                      replicas:
+                        description: |-
+                          The replication role.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            peerInstance:
+                              description: The peer instance.
+                              type: string
+                          type: object
+                        type: array
+                      role:
+                        description: |-
+                          The replication role.
+                          Default value is STANDBY.
+                          Possible values are: ROLE_UNSPECIFIED, ACTIVE, STANDBY.
+                        type: string
+                    type: object
                   kmsKeyName:
                     description: KMS key name used for data encryption.
                     type: string
@@ -1848,6 +1985,21 @@ spec:
                       Default value is NFS_V3.
                       Possible values are: NFS_V3, NFS_V4_1.
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags. Resource manager tag keys
+                      and values have the same definition as resource manager
+                      tags. Keys must be in the format tagKeys/{tag_key_id},
+                      and values are in the format tagValues/456. The field is
+                      ignored when empty. The field is immutable and causes
+                      resource replacement when mutated. This field is only set
+                      at create time and modifying this field after creation
+                      will trigger recreation. To apply tags to an existing
+                      resource, see the google_tags_tag_value resource.
+                    type: object
+                    x-kubernetes-map-type: granular
                   terraformLabels:
                     additionalProperties:
                       type: string
