identityplatform: multiple changes

--- a/examples-generated/identityplatform/v1beta1/oauthidpconfig.yaml
+++ b/examples-generated/identityplatform/v1beta1/oauthidpconfig.yaml
@@ -20,3 +20,6 @@ spec:
     enabled: true
     issuer: issuer
     name: oidc.oauth-idp-config
+    responseType:
+    - code: false
+      idToken: true
