--- a/package/crds/identityplatform.gcp.upbound.io_tenants.yaml
+++ b/package/crds/identityplatform.gcp.upbound.io_tenants.yaml
@@ -76,6 +76,28 @@ spec:
                   allowPasswordSignup:
                     description: Whether to allow email/password user authentication.
                     type: boolean
+                  client:
+                    description: |-
+                      Options related to how clients making requests on behalf of a tenant should be configured.
+                      Structure is documented below.
+                    properties:
+                      permissions:
+                        description: |-
+                          Configuration related to restricting a user's ability to affect their account.
+                          Structure is documented below.
+                        properties:
+                          disabledUserDeletion:
+                            description: When true, end users cannot delete their
+                              account on the associated project through any of our
+                              API methods.
+                            type: boolean
+                          disabledUserSignup:
+                            description: When true, end users cannot sign up for a
+                              new account on the associated project through any of
+                              our API methods.
+                            type: boolean
+                        type: object
+                    type: object
                   disableAuth:
                     description: |-
                       Whether authentication is disabled for the tenant. If true, the users under
@@ -110,6 +132,28 @@ spec:
                   allowPasswordSignup:
                     description: Whether to allow email/password user authentication.
                     type: boolean
+                  client:
+                    description: |-
+                      Options related to how clients making requests on behalf of a tenant should be configured.
+                      Structure is documented below.
+                    properties:
+                      permissions:
+                        description: |-
+                          Configuration related to restricting a user's ability to affect their account.
+                          Structure is documented below.
+                        properties:
+                          disabledUserDeletion:
+                            description: When true, end users cannot delete their
+                              account on the associated project through any of our
+                              API methods.
+                            type: boolean
+                          disabledUserSignup:
+                            description: When true, end users cannot sign up for a
+                              new account on the associated project through any of
+                              our API methods.
+                            type: boolean
+                        type: object
+                    type: object
                   disableAuth:
                     description: |-
                       Whether authentication is disabled for the tenant. If true, the users under
@@ -308,6 +352,28 @@ spec:
                   allowPasswordSignup:
                     description: Whether to allow email/password user authentication.
                     type: boolean
+                  client:
+                    description: |-
+                      Options related to how clients making requests on behalf of a tenant should be configured.
+                      Structure is documented below.
+                    properties:
+                      permissions:
+                        description: |-
+                          Configuration related to restricting a user's ability to affect their account.
+                          Structure is documented below.
+                        properties:
+                          disabledUserDeletion:
+                            description: When true, end users cannot delete their
+                              account on the associated project through any of our
+                              API methods.
+                            type: boolean
+                          disabledUserSignup:
+                            description: When true, end users cannot sign up for a
+                              new account on the associated project through any of
+                              our API methods.
+                            type: boolean
+                        type: object
+                    type: object
                   disableAuth:
                     description: |-
                       Whether authentication is disabled for the tenant. If true, the users under
