--- a/package/crds/kms.gcp.upbound.io_cryptokeyversions.yaml
+++ b/package/crds/kms.gcp.upbound.io_cryptokeyversions.yaml
@@ -776,7 +776,8 @@ spec:
                     type: object
                   state:
                     description: |-
-                      The current state of the CryptoKeyVersion.
+                      The current state of the CryptoKeyVersion. Note: you can only specify this field to manually ENABLE or DISABLE the CryptoKeyVersion,
+                      otherwise the value of this field is always retrieved automatically.
                       Possible values are: PENDING_GENERATION, ENABLED, DISABLED, DESTROYED, DESTROY_SCHEDULED, PENDING_IMPORT, IMPORT_FAILED.
                     type: string
                 type: object
@@ -889,7 +890,8 @@ spec:
                     type: object
                   state:
                     description: |-
-                      The current state of the CryptoKeyVersion.
+                      The current state of the CryptoKeyVersion. Note: you can only specify this field to manually ENABLE or DISABLE the CryptoKeyVersion,
+                      otherwise the value of this field is always retrieved automatically.
                       Possible values are: PENDING_GENERATION, ENABLED, DISABLED, DESTROYED, DESTROY_SCHEDULED, PENDING_IMPORT, IMPORT_FAILED.
                     type: string
                 type: object
@@ -1163,7 +1165,8 @@ spec:
                     type: string
                   state:
                     description: |-
-                      The current state of the CryptoKeyVersion.
+                      The current state of the CryptoKeyVersion. Note: you can only specify this field to manually ENABLE or DISABLE the CryptoKeyVersion,
+                      otherwise the value of this field is always retrieved automatically.
                       Possible values are: PENDING_GENERATION, ENABLED, DISABLED, DESTROYED, DESTROY_SCHEDULED, PENDING_IMPORT, IMPORT_FAILED.
                     type: string
                 type: object
