--- a/package/crds/kms.gcp.upbound.io_keyringimportjobs.yaml
+++ b/package/crds/kms.gcp.upbound.io_keyringimportjobs.yaml
@@ -76,7 +76,7 @@ spec:
                   importMethod:
                     description: |-
                       The wrapping method to be used for incoming key material.
-                      Possible values are: RSA_OAEP_3072_SHA1_AES_256, RSA_OAEP_4096_SHA1_AES_256.
+                      Possible values are: RSA_OAEP_3072_SHA1_AES_256, RSA_OAEP_4096_SHA1_AES_256, RSA_OAEP_3072_SHA256_AES_256, RSA_OAEP_4096_SHA256_AES_256, RSA_OAEP_3072_SHA256, RSA_OAEP_4096_SHA256.
                     type: string
                   keyRing:
                     description: |-
@@ -180,7 +180,7 @@ spec:
                   importMethod:
                     description: |-
                       The wrapping method to be used for incoming key material.
-                      Possible values are: RSA_OAEP_3072_SHA1_AES_256, RSA_OAEP_4096_SHA1_AES_256.
+                      Possible values are: RSA_OAEP_3072_SHA1_AES_256, RSA_OAEP_4096_SHA1_AES_256, RSA_OAEP_3072_SHA256_AES_256, RSA_OAEP_4096_SHA256_AES_256, RSA_OAEP_3072_SHA256, RSA_OAEP_4096_SHA256.
                     type: string
                   protectionLevel:
                     description: |-
@@ -402,7 +402,7 @@ spec:
                   importMethod:
                     description: |-
                       The wrapping method to be used for incoming key material.
-                      Possible values are: RSA_OAEP_3072_SHA1_AES_256, RSA_OAEP_4096_SHA1_AES_256.
+                      Possible values are: RSA_OAEP_3072_SHA1_AES_256, RSA_OAEP_4096_SHA1_AES_256, RSA_OAEP_3072_SHA256_AES_256, RSA_OAEP_4096_SHA256_AES_256, RSA_OAEP_3072_SHA256, RSA_OAEP_4096_SHA256.
                     type: string
                   keyRing:
                     description: |-
